2004-10-26  Carl Worth  <cworth@cworth.org>

	* configure.in: Shell doesn't like whitespace around assignment
	operator.

	* test/README: Add paragraph on new features.	

	* test/.cvsignore:
	* test/Makefile.am:
	* test/README:
	* test/cairo_test.c:
	* test/cairo_test.h:
	* test/line_width-ref.png:
	* test/line_width.c:
	* test/move_to_show_surface-ref.png:
	* test/move_to_show_surface.c:
	* test/read_png.c:
	* test/read_png.h:
	* test/write_png.c:
	* test/write_png.h:
	* test/xmalloc.c:
	* test/xmalloc.h: Add initial regression test suite.

	* configure.in: Don't AC_SUBST a dozen different FOO_CFLAGS and
	FOO_LIBS. Instead, incrementally build up just CAIRO_CFLAGS and
	CAIRO_LIBS.

	* cairo.pc.in (Libs): Don't list flags that should get picked up
	via dependency information through Requires.

	* BUGS (font-size): Add description of move_to_show_surface.

2004-10-21  Carl Worth  <cworth@cworth.org>

	* src/cairo_png_surface.c:
	* src/cairo.c:
	* src/cairo.h:
	* src/cairo_cache.c:
	* src/cairo_color.c:
	* src/cairo_fixed.c:
	* src/cairo_font.c:
	* src/cairo_ft_font.c:
	* src/cairo_glitz_surface.c:
	* src/cairo_gstate.c:
	* src/cairo_hull.c:
	* src/cairo_image_surface.c:
	* src/cairo_matrix.c:
	* src/cairo_path.c:
	* src/cairo_path_bounds.c:
	* src/cairo_path_fill.c:
	* src/cairo_path_stroke.c:
	* src/cairo_pattern.c:
	* src/cairo_pen.c:
	* src/cairo_png_surface.c:
	* src/cairo_polygon.c:
	* src/cairo_ps_surface.c:
	* src/cairo_slope.c:
	* src/cairo_spline.c:
	* src/cairo_surface.c:
	* src/cairo_traps.c:
	* src/cairo_xcb_surface.c:
	* src/cairo_xlib_surface.c:
	* src/cairoint.h: Convert all files to utf-8. Add copyright
	information to cairo_png_surface.c.

	* src/cairo_hull.c (_cairo_hull_vertex_compare): Fix comparison so
	that it results in a stable sort. This should fix some rendering
	bugs due to broken pens.

	* TODO: Add items on custom caps and getting access to hidden
	image data

	* Makefile.am (EXTRA_DIST): Add COPYING-LGPL-2.1 and